# fast_division

./: CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt  benchmark.cpp
include/fast_division/: fast_division.h
tests/: CMakeLists.txt  basictests.cpp
